--- a/autoencoders/vanilla_autoencoder/vanilla_autoencoder.ipynb
+++ b/autoencoders/vanilla_autoencoder/vanilla_autoencoder.ipynb
@@ -340,6 +340,8 @@
     "for i in tqdm(range(100000)):\n",
     "  X, y = mnist.train.next_batch(batch_size=128)\n",
     "  _, loss_val = sess.run([train_op, loss], {observable: X})\n",
+    "  if np.isnan(loss_Xy_val):\n",
+    "    raise ValueError('Loss has been NaN.')\n",
     "  loss_vals.append(loss_val)\n",
     "\n",
     "print('Final loss:', np.mean(loss_vals[-100:]))\n",
@@ -508,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.0"
   },
   "toc": {
    "base_numbering": 1,
